--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
 <html>
-Hello World!
+    <title>Blockchain & verteilte Systeme</title>
+    <body>
+        <p>Dies ist das Praktikum 1 - REST</p>
+    </body>
 </html>
